# home_automation_helper

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  README.md  benchmark.py  benchmark_vestaboard_options.py  board.py  main.py  plan.md  pyproject.toml  requirements.txt  test_rate_limit.py
.claude/: settings.local.json
.github/workflows/: CI.yml  build.yml  main.yml  tests.yml
.jules/: bolt.md  sentinel.md
app/: config.py  main.py  models.py
app/connectors/: vestaboard.py
app/games/: boggle.py
app/middleware/: security.py
app/sayings/: sayings.py
connectors/: octranspo.py  vestaboard.py
games/: boggle.py
sayings/: sayings.py  sayings_proc.py
tests/: conftest.py  test_art_endpoint.py  test_boggle.py  test_config.py  test_main.py  test_nsfw_quote.py  test_nsfw_quote_local.py  test_quote_reroll.py  test_rate_limiter.py  test_sayings.py  test_sfw_quote.py  test_sfw_quote_local.py  test_vestaboard_connector.py
