[tool.poetry]
name = "app"
version = "0.1.0"
description = "A simple FastAPI application."
authors = ["Andrew Bell <andrew@qsig.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
mysql-connector-python = "9.3.0"
pydantic = "2.11.3"
pydantic-settings = "2.9.1"
fastapi = {version = "0.115.12", extras = ["standard"]}
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
